// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders correctly 1`] = `
<div
  class="kd-tabs"
  data-ignore-auto-rtl="false"
>
  <div
    class="kd-tabs-navs kd-tabs-navs-line kd-tabs-navs-middle"
    style="touch-action:pan-y"
    type="line"
  >
    <div
      class="kd-tabs-tab-wrap"
    >
      <div
        class="kd-tabs-tab-list "
        data-ignore-auto-rtl="false"
        style="left:0px"
      >
        <span
          class="kd-tab-pane kd-tab-pane-box-active kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-line kd-tab-pane-middle kd-tab-pane-notMobile"
        >
          <span
            class="kd-tab-pane-text kd-tab-pane-text-active kd-tab-pane-text-notMobile"
          >
            TabPane1
          </span>
        </span>
        <span
          class="kd-active-line"
          style="left:0px;width:0px"
        />
      </div>
    </div>
  </div>
  <div
    class="kd-carousel-root"
  >
    <ul
      class="kd-carousel-list kd-carousel-list-display"
    >
      <li
        class="kd-carousel-list-item kd-carousel-list-item-not-hidden"
      >
        TabPane1
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tabs renders correctly 2`] = `
<div
  class="kd-tabs"
  data-ignore-auto-rtl="false"
>
  <div
    class="kd-tabs-navs kd-tabs-navs-card kd-tabs-navs-middle"
    style="touch-action:pan-y"
    type="card"
  >
    <div
      class="kd-tabs-tab-wrap"
    >
      <div
        class="kd-tabs-tab-list "
        data-ignore-auto-rtl="false"
        style="left:0px"
      >
        <span
          class="kd-tab-pane kd-tab-pane-box-active kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
        >
          <span
            class="kd-tab-pane-text kd-tab-pane-text-active kd-tab-pane-text-notMobile"
          >
            TabPane1
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="kd-carousel-root"
  >
    <ul
      class="kd-carousel-list kd-carousel-list-display"
    >
      <li
        class="kd-carousel-list-item kd-carousel-list-item-not-hidden"
      >
        TabPane1
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tabs renders correctly 3`] = `
<div
  class="kd-tabs"
  data-ignore-auto-rtl="false"
>
  <div
    class="kd-tabs-navs kd-tabs-navs-grid kd-tabs-navs-middle"
    style="touch-action:pan-y"
    type="grid"
  >
    <div
      class="kd-tabs-tab-wrap"
    >
      <div
        class="kd-tabs-tab-list "
        data-ignore-auto-rtl="false"
        style="left:0px"
      >
        <span
          class="kd-tab-pane kd-tab-pane-box-active kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-grid kd-tab-pane-middle kd-tab-pane-notMobile"
        >
          <span
            class="kd-tab-pane-text kd-tab-pane-text-active kd-tab-pane-text-notMobile"
          >
            TabPane1
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="kd-carousel-root"
  >
    <ul
      class="kd-carousel-list kd-carousel-list-display"
    >
      <li
        class="kd-carousel-list-item kd-carousel-list-item-not-hidden"
      >
        TabPane1
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tabs renders correctly 4`] = `
<div
  class="kd-tabs"
  data-ignore-auto-rtl="false"
>
  <div
    class="kd-tabs-navs kd-tabs-navs-dynamic kd-tabs-navs-middle"
    style="touch-action:pan-y"
    type="dynamic"
  >
    <div
      class="kd-tabs-tab-wrap"
    >
      <div
        class="kd-tabs-tab-list "
        data-ignore-auto-rtl="false"
        style="left:0px"
      >
        <span
          class="kd-tab-pane kd-tab-pane-box-active kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-dynamic kd-tab-pane-middle kd-tab-pane-notMobile"
        >
          <span
            class="kd-tab-pane-text kd-tab-pane-text-active kd-tab-pane-text-notMobile"
          >
            TabPane1
          </span>
          <span
            class="kd-tab-pane-operations kd-tab-pane-operations-active"
          />
        </span>
        <span
          class="kd-active-line"
          style="left:0px;width:0px"
        />
      </div>
    </div>
  </div>
  <div
    class="kd-carousel-root"
  >
    <ul
      class="kd-carousel-list kd-carousel-list-display"
    >
      <li
        class="kd-carousel-list-item kd-carousel-list-item-not-hidden"
      >
        TabPane1
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tabs renders correctly 5`] = `
<div
  class="kd-tabs kd-tabs-top"
  data-ignore-auto-rtl="false"
>
  <div
    class="kd-tabs-navs kd-tabs-navs-card kd-tabs-navs-top kd-tabs-navs-middle"
    position="top"
    style="touch-action:pan-y"
    type="card"
  >
    <div
      class="kd-tabs-tab-wrap"
    >
      <div
        class="kd-tabs-tab-list "
        data-ignore-auto-rtl="false"
        style="left:0px"
      >
        <span
          class="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-top kd-tab-pane-middle kd-tab-pane-notMobile"
        >
          <span
            class="kd-tab-pane-text kd-tab-pane-text-notMobile"
          >
            TabPane2
          </span>
        </span>
        <span
          class="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-top kd-tab-pane-middle kd-tab-pane-disabled kd-tab-pane-notMobile"
        >
          <span
            class="kd-tab-pane-text kd-tab-pane-text-disabled kd-tab-pane-text-notMobile"
          >
            TabPane1
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="kd-carousel-root"
  >
    <ul
      class="kd-carousel-list kd-carousel-list-display"
    >
      <li
        class="kd-carousel-list-item kd-carousel-list-item-not-hidden"
      >
        TabPane1
      </li>
      <li
        class="kd-carousel-list-item kd-carousel-list-item-hidden"
      >
        TabPane2
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tabs renders correctly 6`] = `
<div
  class="kd-tabs kd-tabs-left"
  data-ignore-auto-rtl="false"
>
  <div
    class="kd-tabs-navs kd-tabs-navs-card kd-tabs-navs-left kd-tabs-navs-middle"
    position="left"
    style="touch-action:pan-y"
    type="card"
  >
    <div
      class="kd-tabs-tab-wrap"
    >
      <div
        class="kd-tabs-tab-list "
        data-ignore-auto-rtl="false"
        style="left:0px"
      >
        <span
          class="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-left kd-tab-pane-middle kd-tab-pane-notMobile"
        >
          <span
            class="kd-tab-pane-text kd-tab-pane-text-notMobile"
          >
            TabPane2
          </span>
        </span>
        <span
          class="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-left kd-tab-pane-middle kd-tab-pane-disabled kd-tab-pane-notMobile"
        >
          <span
            class="kd-tab-pane-text kd-tab-pane-text-disabled kd-tab-pane-text-notMobile"
          >
            TabPane1
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="kd-carousel-root"
  >
    <ul
      class="kd-carousel-list kd-carousel-list-display"
    >
      <li
        class="kd-carousel-list-item kd-carousel-list-item-not-hidden"
      >
        TabPane1
      </li>
      <li
        class="kd-carousel-list-item kd-carousel-list-item-hidden"
      >
        TabPane2
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tabs renders correctly 7`] = `
<div
  class="kd-tabs kd-tabs-right"
  data-ignore-auto-rtl="false"
>
  <div
    class="kd-tabs-navs kd-tabs-navs-card kd-tabs-navs-right kd-tabs-navs-middle"
    position="right"
    style="touch-action:pan-y"
    type="card"
  >
    <div
      class="kd-tabs-tab-wrap"
    >
      <div
        class="kd-tabs-tab-list "
        data-ignore-auto-rtl="false"
        style="left:0px"
      >
        <span
          class="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-right kd-tab-pane-middle kd-tab-pane-notMobile"
        >
          <span
            class="kd-tab-pane-text kd-tab-pane-text-notMobile"
          >
            TabPane2
          </span>
        </span>
        <span
          class="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-right kd-tab-pane-middle kd-tab-pane-disabled kd-tab-pane-notMobile"
        >
          <span
            class="kd-tab-pane-text kd-tab-pane-text-disabled kd-tab-pane-text-notMobile"
          >
            TabPane1
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="kd-carousel-root"
  >
    <ul
      class="kd-carousel-list kd-carousel-list-display"
    >
      <li
        class="kd-carousel-list-item kd-carousel-list-item-not-hidden"
      >
        TabPane1
      </li>
      <li
        class="kd-carousel-list-item kd-carousel-list-item-hidden"
      >
        TabPane2
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tabs renders correctly 8`] = `
<div
  class="kd-tabs kd-tabs-bottom"
  data-ignore-auto-rtl="false"
>
  <div
    class="kd-tabs-navs kd-tabs-navs-card kd-tabs-navs-bottom kd-tabs-navs-middle"
    position="bottom"
    style="touch-action:pan-y"
    type="card"
  >
    <div
      class="kd-tabs-tab-wrap"
    >
      <div
        class="kd-tabs-tab-list "
        data-ignore-auto-rtl="false"
        style="left:0px"
      >
        <span
          class="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-bottom kd-tab-pane-middle kd-tab-pane-notMobile"
        >
          <span
            class="kd-tab-pane-text kd-tab-pane-text-notMobile"
          >
            TabPane2
          </span>
        </span>
        <span
          class="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-bottom kd-tab-pane-middle kd-tab-pane-disabled kd-tab-pane-notMobile"
        >
          <span
            class="kd-tab-pane-text kd-tab-pane-text-disabled kd-tab-pane-text-notMobile"
          >
            TabPane1
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="kd-carousel-root"
  >
    <ul
      class="kd-carousel-list kd-carousel-list-display"
    >
      <li
        class="kd-carousel-list-item kd-carousel-list-item-not-hidden"
      >
        TabPane1
      </li>
      <li
        class="kd-carousel-list-item kd-carousel-list-item-hidden"
      >
        TabPane2
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tabs renders correctly 9`] = `
<Tabs
  type="dynamic"
>
  <TabPane
    specialPane="left"
  >
    <Icon
      type="workbench"
    />
  </TabPane>
  <TabPane
    tab="TabPane1"
  />
  <TabPane
    specialPane="right"
  >
    <Icon
      type="expand"
    />
  </TabPane>
  <TabPane
    specialPane="contextMenu"
  >
    <div>
      关闭当前
    </div>
    <div>
      关闭其他
    </div>
  </TabPane>
</Tabs>
`;

exports[`Tabs renders correctly 10`] = `
<div
  style={
    Object {
      "width": "200px",
    }
  }
>
  <Tabs
    defaultActiveKey={0}
    showScrollArrow={true}
    type="card"
  >
    <div
      className="kd-tabs"
      data-ignore-auto-rtl={false}
    >
      <div
        className="kd-tabs-navs kd-tabs-navs-card kd-tabs-navs-middle"
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        size="middle"
        style={
          Object {
            "touchAction": "pan-y",
          }
        }
        type="card"
      >
        <div
          className="kd-tabs-tab-wrap"
        >
          <div
            className="kd-tabs-tab-list "
            data-ignore-auto-rtl={false}
            style={
              Object {
                "left": "0px",
              }
            }
          >
            <TabPane
              id="0"
              key="0"
              onChange={[Function]}
              tab="TabPane00"
            >
              <span
                className="kd-tab-pane kd-tab-pane-box-active kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-active kd-tab-pane-text-notMobile"
                >
                  TabPane00
                </span>
              </span>
            </TabPane>
            <TabPane
              id="1"
              key="1"
              onChange={[Function]}
              tab="TabPane01"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane01
                </span>
              </span>
            </TabPane>
            <TabPane
              id="2"
              key="2"
              onChange={[Function]}
              tab="TabPane02"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane02
                </span>
              </span>
            </TabPane>
            <TabPane
              id="3"
              key="3"
              onChange={[Function]}
              tab="TabPane03"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane03
                </span>
              </span>
            </TabPane>
            <TabPane
              id="4"
              key="4"
              onChange={[Function]}
              tab="TabPane04"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane04
                </span>
              </span>
            </TabPane>
            <TabPane
              id="5"
              key="5"
              onChange={[Function]}
              tab="TabPane05"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane05
                </span>
              </span>
            </TabPane>
            <TabPane
              id="6"
              key="6"
              onChange={[Function]}
              tab="TabPane06"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane06
                </span>
              </span>
            </TabPane>
            <TabPane
              id="7"
              key="7"
              onChange={[Function]}
              tab="TabPane07"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane07
                </span>
              </span>
            </TabPane>
            <TabPane
              id="8"
              key="8"
              onChange={[Function]}
              tab="TabPane08"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane08
                </span>
              </span>
            </TabPane>
            <TabPane
              id="9"
              key="9"
              onChange={[Function]}
              tab="TabPane09"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane09
                </span>
              </span>
            </TabPane>
            <TabPane
              id="10"
              key="10"
              onChange={[Function]}
              tab="TabPane010"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane010
                </span>
              </span>
            </TabPane>
            <TabPane
              id="11"
              key="11"
              onChange={[Function]}
              tab="TabPane011"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane011
                </span>
              </span>
            </TabPane>
            <TabPane
              id="12"
              key="12"
              onChange={[Function]}
              tab="TabPane012"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane012
                </span>
              </span>
            </TabPane>
            <TabPane
              id="13"
              key="13"
              onChange={[Function]}
              tab="TabPane013"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane013
                </span>
              </span>
            </TabPane>
            <TabPane
              id="14"
              key="14"
              onChange={[Function]}
              tab="TabPane014"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane014
                </span>
              </span>
            </TabPane>
            <TabPane
              id="15"
              key="15"
              onChange={[Function]}
              tab="TabPane015"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane015
                </span>
              </span>
            </TabPane>
            <TabPane
              id="16"
              key="16"
              onChange={[Function]}
              tab="TabPane016"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane016
                </span>
              </span>
            </TabPane>
            <TabPane
              id="17"
              key="17"
              onChange={[Function]}
              tab="TabPane017"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane017
                </span>
              </span>
            </TabPane>
            <TabPane
              id="18"
              key="18"
              onChange={[Function]}
              tab="TabPane018"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane018
                </span>
              </span>
            </TabPane>
            <TabPane
              id="19"
              key="19"
              onChange={[Function]}
              tab="TabPane019"
            >
              <span
                className="kd-tab-pane kd-tab-pane-type-dynamic-notMobile kd-tab-pane-type-card kd-tab-pane-middle kd-tab-pane-notMobile"
                onClick={[Function]}
              >
                <span
                  className="kd-tab-pane-text kd-tab-pane-text-notMobile"
                >
                  TabPane019
                </span>
              </span>
            </TabPane>
          </div>
        </div>
      </div>
      <Carousel
        autoplay={false}
        dots={false}
        effect="none"
      >
        <div
          className="kd-carousel-root"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTransitionEnd={[Function]}
        >
          <ForwardRef
            currentIndex={0}
            items={
              Array [
                <React.Fragment>
                  TabPane00
                </React.Fragment>,
                <React.Fragment>
                  TabPane01
                </React.Fragment>,
                <React.Fragment>
                  TabPane02
                </React.Fragment>,
                <React.Fragment>
                  TabPane03
                </React.Fragment>,
                <React.Fragment>
                  TabPane04
                </React.Fragment>,
                <React.Fragment>
                  TabPane05
                </React.Fragment>,
                <React.Fragment>
                  TabPane06
                </React.Fragment>,
                <React.Fragment>
                  TabPane07
                </React.Fragment>,
                <React.Fragment>
                  TabPane08
                </React.Fragment>,
                <React.Fragment>
                  TabPane09
                </React.Fragment>,
                <React.Fragment>
                  TabPane010
                </React.Fragment>,
                <React.Fragment>
                  TabPane011
                </React.Fragment>,
                <React.Fragment>
                  TabPane012
                </React.Fragment>,
                <React.Fragment>
                  TabPane013
                </React.Fragment>,
                <React.Fragment>
                  TabPane014
                </React.Fragment>,
                <React.Fragment>
                  TabPane015
                </React.Fragment>,
                <React.Fragment>
                  TabPane016
                </React.Fragment>,
                <React.Fragment>
                  TabPane017
                </React.Fragment>,
                <React.Fragment>
                  TabPane018
                </React.Fragment>,
                <React.Fragment>
                  TabPane019
                </React.Fragment>,
              ]
            }
            parentPrefixCls="kd-carousel"
          >
            <ul
              className="kd-carousel-list kd-carousel-list-display"
            >
              <li
                className="kd-carousel-list-item kd-carousel-list-item-not-hidden"
                key="0"
              >
                TabPane00
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="1"
              >
                TabPane01
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="2"
              >
                TabPane02
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="3"
              >
                TabPane03
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="4"
              >
                TabPane04
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="5"
              >
                TabPane05
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="6"
              >
                TabPane06
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="7"
              >
                TabPane07
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="8"
              >
                TabPane08
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="9"
              >
                TabPane09
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="10"
              >
                TabPane010
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="11"
              >
                TabPane011
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="12"
              >
                TabPane012
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="13"
              >
                TabPane013
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="14"
              >
                TabPane014
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="15"
              >
                TabPane015
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="16"
              >
                TabPane016
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="17"
              >
                TabPane017
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="18"
              >
                TabPane018
              </li>
              <li
                className="kd-carousel-list-item kd-carousel-list-item-hidden"
                key="19"
              >
                TabPane019
              </li>
            </ul>
          </ForwardRef>
        </div>
      </Carousel>
    </div>
  </Tabs>
</div>
`;
